# kafka-python-msk

./: .env.example  .gitignore  pyproject.toml
kafka-python-msk/: consumer.py  create_topic.py  list_topic.py  producer.py
src/: producer.py
